@@ -1,3 +1,6 @@
+Changes since revision 348:
+*Improved arrowing around Outlook Express message edit controls and Internet Explorer edit controls much more. Now NVDA doesn't get incorrect text when reading past a url or reading through a reply message etc.
+
 Changes since revision 316:
 *Support for edit fields and text chat log in Skype.
 *Internet Explorer (MSHTML) virtualBuffers now render IFrames (which means that user accounts in control panel now shows more of its content).
